Add production deployment step to gitlab.ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: ruby:2.5.1
 stages:
   - build
   - deploy_staging
+  - deploy_production
 
 job_build:
   stage: build
@@ -21,3 +22,12 @@ job_deploy_staging:
   only:
     variables:
       - $STAGING_BRANCH == $CI_COMMIT_REF_NAME
+
+job_deploy_production:
+  stage: deploy_production
+  script:
+  - gem install dpl -v 1.10.12
+  - dpl --provider=heroku --app=$HEROKU_PRODUCTION_APP --api-key=$HEROKU_API_KEY
+  only:
+    variables:
+      - $PRODUCTION_BRANCH == $CI_COMMIT_REF_NAME
